# DepGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: depgraph.qrc  style.qss
src/: main.cpp
src/github/: GitHandler.cpp  GitHandler.h
src/gui/: GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h
src/model/: Edge.cpp  Edge.h  GraphModel.cpp  GraphModel.h  Node.h
src/parser/: CMakeParser.cpp  CMakeParser.h  DependencyScanner.cpp  DependencyScanner.h  GradleParser.cpp  GradleParser.h  JSONParser.cpp  JSONParser.h  XMLParser.cpp  XMLParser.h
